instagram and strava updates from 2017-07-31

--- a/instagram34.html
+++ b/instagram34.html
@@ -6,6 +6,75 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000704.jpg" title="Water bottle drills, hill repeats, barrier practice, sprints...twilight #lovestarfactoryteam cross practice...because cross really is coming. #cx #cyclocross #crossiscoming #strava #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Water bottle drills, hill repeats, barrier practice, sprints...twilight #lovestarfactoryteam cross practice...because cross really is coming. #cx #cyclocross #crossiscoming #strava #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000704.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000705.jpg" title="Family ride! #adventuredad #fatbike #striderbikes #lovestarfactoryteam #cycling #bicycle #bikechi #NorthBranchTrail" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Family ride! #adventuredad #fatbike #striderbikes #lovestarfactoryteam #cycling #bicycle #bikechi #NorthBranchTrail</small>
+                           </div>
+                           <img src="../lsphotos/image000705.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000269.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000269.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000270.jpg" title="Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000270.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000706.jpg" title="New kits! #lovestarfactoryteam #ladiesoflovestar #fleshleeches" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>New kits! #lovestarfactoryteam #ladiesoflovestar #fleshleeches</small>
+                           </div>
+                           <img src="../lsphotos/image000706.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000271.jpg" title="Regram from @theandyhudson ... love seeing #lovestarbicyclebags in the wild." rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -198,71 +267,6 @@ Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicycl
                               <small>Been a rad summer for gravel so far...but really starting to get stoked about cross season... #crossiscoming #cyclocross #gravel #gravelgrinder #cycling #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000715.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000716.jpg" title="Only had time for a quick flyby at the @velosmith Rapha Mobile Cycle Club event this morning. Still, any ride is better than no ride. Thanks to Velosmith and @rapha_tillie for the coffee and donuts! #velosmith #rapha #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Only had time for a quick flyby at the @velosmith Rapha Mobile Cycle Club event this morning. Still, any ride is better than no ride. Thanks to Velosmith and @rapha_tillie for the coffee and donuts! #velosmith #rapha #bikechi #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000716.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000276.jpg" title="Glorious night ride home tonight. #bikechi #lovestarbicyclebags #fatbike #bikecommute #nightride #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Glorious night ride home tonight. #bikechi #lovestarbicyclebags #fatbike #bikecommute #nightride #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000276.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000277.jpg" title="Regram from @ddave12000 of this mornings #lovestarfactoryteam ride! Great crew, lots of fun. #Chicago #cycling #cyclist #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Regram from @ddave12000 of this mornings #lovestarfactoryteam ride! Great crew, lots of fun. #Chicago #cycling #cyclist #lovestarbicyclebags #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000277.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000278.jpg" title="Great time riding today with the Lovestar Team. Here is Olivia and Priscilla crushing it at the Fort #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Great time riding today with the Lovestar Team. Here is Olivia and Priscilla crushing it at the Fort #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000278.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000717.jpg" title="#ladiesoflovestar #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>#ladiesoflovestar #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000717.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
