--- a/instagram7.html
+++ b/instagram7.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000873.jpg" title="#LovestarRaceClub off to Barry Roubaix! @ridecannondale @missionworkshop @lazersport @barryroubaix1" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#LovestarRaceClub off to Barry Roubaix! @ridecannondale @missionworkshop @lazersport @barryroubaix1</small>
+                           </div>
+                           <img src="../lsphotos/image000873.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000872.jpg" title="@ddave12000 instagramming. #barrybound #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>@ddave12000 instagramming. #barrybound #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000872.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000870.jpg" title="Stealthy custom #lovestarbicyclebags SaddlePack for a teammate just in time for @barryroubaix1 ... I have had my shop in a holding pattern for the last few months. It's just been one thing too many to try and juggle between being a stay-at-home Dad, working part time at the shop, trying to ride and train, and keep a happy marriage ... but hopefully I'll find some additional bandwidth soon and start accepting orders! 👍 #bicycle #cycling #bikepacking #adventurebike #gravelbike #cyclocross #bicyclebag #custom #SewRad #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stealthy custom #lovestarbicyclebags SaddlePack for a teammate just in time for @barryroubaix1 ... I have had my shop in a holding pattern for the last few months. It's just been one thing too many to try and juggle between being a stay-at-home Dad, working part time at the shop, trying to ride and train, and keep a happy marriage ... but hopefully I'll find some additional bandwidth soon and start accepting orders! 👍 #bicycle #cycling #bikepacking #adventurebike #gravelbike #cyclocross #bicyclebag #custom #SewRad #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000870.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000858.jpg" title="Always something new and interesting on this trail. #bikechi #cyclocross #gravelbike #bicycle #DPRT #adventurebike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Always something new and interesting on this trail. #bikechi #cyclocross #gravelbike #bicycle #DPRT #adventurebike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000858.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000859.jpg" title="DPRT #cycling #bicycle #gravelbike #cyclocross #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>DPRT #cycling #bicycle #gravelbike #cyclocross #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000859.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000860.jpg" title="Lovestar Ladies on a family commute. #lovestarraceclub #cycling #adventurefamily #bicycle #clearybikes #outsideisfree #adventuremom" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -194,71 +259,6 @@
                               <small>Rear View Mirror. #cycling #bicycle #dadlife #clearybikes #siblings #lilshredder #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000853.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000850.jpg" title="Gravel Time. #lovestarraceclub #bicycle #cycling #ridecannondale #superX #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gravel Time. #lovestarraceclub #bicycle #cycling #ridecannondale #superX #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000850.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000849.jpg" title="What's that smell? #bicycle #cycling #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>What's that smell? #bicycle #cycling #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000849.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000851.jpg" title="...I mean seriously. That is totally an &quot;I'm gonna rip daddy's legs off in the sprint&quot; face... #adventurefamily #bicycle #cycling #clearybikes #lilshredder #dadlife #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>...I mean seriously. That is totally an "I'm gonna rip daddy's legs off in the sprint" face... #adventurefamily #bicycle #cycling #clearybikes #lilshredder #dadlife #adventuredad #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000851.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000852.jpg" title="#babySNUB in race mode on our family commute this morning. #lovestarraceclub #lilshredder #clearybikes #cycling #bicycle #adventurefamily" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babySNUB in race mode on our family commute this morning. #lovestarraceclub #lilshredder #clearybikes #cycling #bicycle #adventurefamily</small>
-                           </div>
-                           <img src="../lsphotos/image000852.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000848.jpg" title="Fatty Friday Ride. #cycling #fatbike #bicycle #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fatty Friday Ride. #cycling #fatbike #bicycle #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000848.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
