--- a/index.html
+++ b/index.html
@@ -173,6 +173,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001011.jpg" title="Band-aids, boots & bikes #lilshredder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Band-aids, boots & bikes #lilshredder</small>
+                           </div>
+                           <img src="../lsphotos/image001011.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001010.jpg" title="Serious fun this morning. #lovestarraceclub 📷&🚴 courtesy of @elliotlovestarbicycles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Serious fun this morning. #lovestarraceclub 📷&🚴 courtesy of @elliotlovestarbicycles</small>
+                           </div>
+                           <img src="../lsphotos/image001010.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001008.jpg" title="It's blurry but still cool. This is me trying to get rad on my fat bike lol. #borealisecho #lovestarraceclub 📷@elliotlovestarbicycles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>It's blurry but still cool. This is me trying to get rad on my fat bike lol. #borealisecho #lovestarraceclub 📷@elliotlovestarbicycles</small>
+                           </div>
+                           <img src="../lsphotos/image001008.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001012.jpg" title="@mrchanzalez Sunday Shreddin'" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@mrchanzalez Sunday Shreddin'</small>
+                           </div>
+                           <img src="../lsphotos/image001012.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001009.jpg" title="First shred fest. Only one big spill. Some cuts, a big ol bruise, and a giant smile. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>First shred fest. Only one big spill. Some cuts, a big ol bruise, and a giant smile. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image001009.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001006.jpg" title="This year for the three weeks of the tour, #lovestarraceclub riders were participating in a competition amongst ourselves to see who could ride the most miles, keep the highest average speed & gain the most elevation (Yellow, Green & PolkaDots) with custom seat bags and bragging rights on the line, competition was fierce...782  miles was the distance that claimed the Yellow SaddlePack. An Average speed of 19.5mph claimed the Green SaddlePack and 20,350 feet of climbing climbing claimed the polka dots! #cycling #tdf2017 #maillotjaune #clubride #bicycle #handmade #bicyclebag #lovestarbicyclebags #roadie #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -365,71 +430,6 @@
                               <small>Sunset miles with #babySNUB</small>
                            </div>
                            <img src="../lsphotos/image000993.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000992.jpg" title="Dinosaur flyover. #crossiscoming" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Dinosaur flyover. #crossiscoming</small>
-                           </div>
-                           <img src="../lsphotos/image000992.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000991.jpg" title="Palos patrol & testing out the new whip. 📷credit @mrchanzalez #mtb #cycling #bicycle #mountainbike #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Palos patrol & testing out the new whip. 📷credit @mrchanzalez #mtb #cycling #bicycle #mountainbike #bikechi #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000991.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000989.jpg" title="#tbt ... Summer is in full swing, but pre-dawn frozen lagoon rides will be here before we know it. Honestly, fatbikes changed my entire outlook about winter riding. I don't dread the long cold months anymore, I look forward to it. #bikechi #cycling #bicycle #fatbike #mtb #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#tbt ... Summer is in full swing, but pre-dawn frozen lagoon rides will be here before we know it. Honestly, fatbikes changed my entire outlook about winter riding. I don't dread the long cold months anymore, I look forward to it. #bikechi #cycling #bicycle #fatbike #mtb #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000989.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000990.jpg" title="There are some mornings I don't get to ride fast or far...but they are still some of my very favorite rides. #dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>There are some mornings I don't get to ride fast or far...but they are still some of my very favorite rides. #dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image000990.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000988.jpg" title="Bike smiles. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Bike smiles. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000988.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
