--- a/instagram1.html
+++ b/instagram1.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000992.jpg" title="Dinosaur flyover. #crossiscoming" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Dinosaur flyover. #crossiscoming</small>
+                           </div>
+                           <img src="../lsphotos/image000992.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000991.jpg" title="Palos patrol & testing out the new whip. 📷credit @mrchanzalez #mtb #cycling #bicycle #mountainbike #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Palos patrol & testing out the new whip. 📷credit @mrchanzalez #mtb #cycling #bicycle #mountainbike #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000991.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000989.jpg" title="#tbt ... Summer is in full swing, but pre-dawn frozen lagoon rides will be here before we know it. Honestly, fatbikes changed my entire outlook about winter riding. I don't dread the long cold months anymore, I look forward to it. #bikechi #cycling #bicycle #fatbike #mtb #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#tbt ... Summer is in full swing, but pre-dawn frozen lagoon rides will be here before we know it. Honestly, fatbikes changed my entire outlook about winter riding. I don't dread the long cold months anymore, I look forward to it. #bikechi #cycling #bicycle #fatbike #mtb #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000989.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000990.jpg" title="There are some mornings I don't get to ride fast or far...but they are still some of my very favorite rides. #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>There are some mornings I don't get to ride fast or far...but they are still some of my very favorite rides. #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image000990.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000988.jpg" title="Bike smiles. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Bike smiles. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000988.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000987.jpg" title="Didn't quite make it to donuts but I'll settle for Waukegan. #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>clintsievers</h4>
@@ -194,71 +259,6 @@
                               <small>All three kids presented me with Father's Day cards this morning. Each of them had chosen a special activity that they wanted to do one-on-one. My 3rd Outing today was with our 2.5 year old foster daughter. She chose to ride her bike to the park. She recently made the jump from balance bike to pedal bike and was VERY excited that she got to ride her bike The whole wAy there. ❤️🚲 #fathersday #dadlife #adventuredad #bicycle #bikechi #fatbike #bikepacking #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000973.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000972.jpg" title="The many faces of @mandyjaneday #cycling #puremichigan #southhaven #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>clintsievers</h4>
-                              <small>The many faces of @mandyjaneday #cycling #puremichigan #southhaven #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000972.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000970.jpg" title="#adventurebike #lakemichigan #bikechi #lovestarbicyclebags #lovestarraceclub #fatbike #cycling #bicycle #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#adventurebike #lakemichigan #bikechi #lovestarbicyclebags #lovestarraceclub #fatbike #cycling #bicycle #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000970.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000971.jpg" title="Rain made for hard packed sand and high water #cycling #bicycle #fatbike #bikepacking #adventurebike #lakemichigan #bikechi #lovestarbicyclebags #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Rain made for hard packed sand and high water #cycling #bicycle #fatbike #bikepacking #adventurebike #lakemichigan #bikechi #lovestarbicyclebags #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000971.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000969.jpg" title="Weekday ride with Gonzo #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Weekday ride with Gonzo #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000969.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000968.jpg" title="Sibling coaching. #lilshredder #kidsonbikes #clearybikes #cycling #bicycle #trainer #coach #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sibling coaching. #lilshredder #kidsonbikes #clearybikes #cycling #bicycle #trainer #coach #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000968.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
