--- a/instagram17.html
+++ b/instagram17.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000108.jpg" title="28 miles, 5700 feet of climbing. #cascadehuts #bikepacking #bikecamping #cycling #bicycle #mthood #lovestarbicyclebags #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>28 miles, 5700 feet of climbing. #cascadehuts #bikepacking #bikecamping #cycling #bicycle #mthood #lovestarbicyclebags #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image000108.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000109.jpg" title="Sunset gear shakedown. Dinner...sleep...then trail time begins! #bikepacking #bicycle #bikecamping #cycling #mthood #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset gear shakedown. Dinner...sleep...then trail time begins! #bikepacking #bicycle #bikecamping #cycling #mthood #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000109.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000076.jpg" title="All smiles as we carb up for our epic Mt Hood ride #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>All smiles as we carb up for our epic Mt Hood ride #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000076.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000110.jpg" title="Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000110.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000111.jpg" title="Finished up a handlebar grab bag. The whole #bikepacking kit is starting to come together. #lovestarbicyclebags #handmade #bikechi #adventurebike #fatbike #bicyclebag #bicycle #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a handlebar grab bag. The whole #bikepacking kit is starting to come together. #lovestarbicyclebags #handmade #bikechi #adventurebike #fatbike #bicyclebag #bicycle #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000111.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000112.jpg" title="Had to take some pictures of my gear with some better light. #Bikepacking #bicycle #fatbike #adventurebike #bikechi #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -194,71 +259,6 @@
                               <small>#LovestarBicycleBags #handmade #bikepacking #bikepackingbag #bicycle #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000115.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000116.jpg" title="Finished up a fun custom #LovestarBicycleBags frame bag today. Deep purple to match the old-school-cool acid wash paint on this vintage Ross. Mixed in some Red highlights to compliment the overall color pallet on the bike. The entire bag is made of 1000D #Cordura so it should last the owner another 20 years. #handmade #bicyclebag #cycling #bicycle #mtb #bikepacking #bikepackingbag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a fun custom #LovestarBicycleBags frame bag today. Deep purple to match the old-school-cool acid wash paint on this vintage Ross. Mixed in some Red highlights to compliment the overall color pallet on the bike. The entire bag is made of 1000D #Cordura so it should last the owner another 20 years. #handmade #bicyclebag #cycling #bicycle #mtb #bikepacking #bikepackingbag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000116.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000117.jpg" title="Black and purple #LovestarBicycleBags SaddlePack going out the door! #handmade #bicyclebag #cycling #bicycle #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Black and purple #LovestarBicycleBags SaddlePack going out the door! #handmade #bicyclebag #cycling #bicycle #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000117.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000550.jpg" title="Fellowship of the Big Ring. #bicycle #cycling #coffeeride #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fellowship of the Big Ring. #bicycle #cycling #coffeeride #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000550.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000533.jpg" title="Saturday afternoons are good for bike washing. #lovestarfactoryteam #ridecannondale #supersixevo #cleanbike #baaw" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Saturday afternoons are good for bike washing. #lovestarfactoryteam #ridecannondale #supersixevo #cleanbike #baaw</small>
-                           </div>
-                           <img src="../lsphotos/image000533.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000551.jpg" title="It was a close race...but @agonz21 with his blue bike edged me out in the match-your-accessories-to-your-kit game today. #cycling #bicycle #lovestarfactoryteam #bikesonfleek" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>It was a close race...but @agonz21 with his blue bike edged me out in the match-your-accessories-to-your-kit game today. #cycling #bicycle #lovestarfactoryteam #bikesonfleek</small>
-                           </div>
-                           <img src="../lsphotos/image000551.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
