--- a/instagram23.html
+++ b/instagram23.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000148.jpg" title="Today's ride pace. #bicycle #cycling #clearybikes #lovestarbicyclebags #optoutside #outsideisfree #futurecyclist #babySNUB" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Today's ride pace. #bicycle #cycling #clearybikes #lovestarbicyclebags #optoutside #outsideisfree #futurecyclist #babySNUB</small>
+                           </div>
+                           <img src="../lsphotos/image000148.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000611.jpg" title="#tbt to @casadewaggoner leading the #lovestarfactoryteam across the finish line at last year's #Almanzo 100" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#tbt to @casadewaggoner leading the #lovestarfactoryteam across the finish line at last year's #Almanzo 100</small>
+                           </div>
+                           <img src="../lsphotos/image000611.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000612.jpg" title="Mud stud. #lovestarfactoryteam #gravelgrinder #dprt #cycling #bicycle #gravel" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Mud stud. #lovestarfactoryteam #gravelgrinder #dprt #cycling #bicycle #gravel</small>
+                           </div>
+                           <img src="../lsphotos/image000612.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000613.jpg" title="DPRT with this guy. #lovestarfactoryteam #cycling #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>DPRT with this guy. #lovestarfactoryteam #cycling #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000613.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000149.jpg" title="Resistance training. #adventuredad #cycling #fatbike #thulechariot #lovestarbicyclebags #therobertaxleproject" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Resistance training. #adventuredad #cycling #fatbike #thulechariot #lovestarbicyclebags #therobertaxleproject</small>
+                           </div>
+                           <img src="../lsphotos/image000149.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000614.jpg" title="Got a quick ride in during the kids nap today...finished it off by playing around on my neighborhood pirate trails. #cycling #cyclocross #cyclocross365 #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -194,71 +259,6 @@
                               <small>Finished up all the strapping and riveting today. #lovestarbicyclebags #handmade #cycling #bicyclebag #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000158.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000159.jpg" title="Custom #lovestarbicyclebags roll-top porteur bag shipping out today. #handmade #cycling #bicyclebag #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom #lovestarbicyclebags roll-top porteur bag shipping out today. #handmade #cycling #bicyclebag #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000159.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000620.jpg" title="That was a good ride. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>That was a good ride. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000620.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000621.jpg" title="Great ride, great bike, great friends. #myparlee #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Great ride, great bike, great friends. #myparlee #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000621.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000622.jpg" title="Smiles for Miles with @agonz21 #cycling #lovestarfactoryteam #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Smiles for Miles with @agonz21 #cycling #lovestarfactoryteam #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000622.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000160.jpg" title="Enjoying a few more sunrise rides before the crushing blackness of #daylightsavingstime kicks in this weekend. #cycling #bicycle #moots #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Enjoying a few more sunrise rides before the crushing blackness of #daylightsavingstime kicks in this weekend. #cycling #bicycle #moots #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000160.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
