--- a/instagram28.html
+++ b/instagram28.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000642.jpg" title="Killer afternoon hammer fest with these two. Only 363 days until #MontroseCX 2016. #cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Killer afternoon hammer fest with these two. Only 363 days until #MontroseCX 2016. #cycling #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000642.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000214.jpg" title="Cyclocross Illinois Finals...Love Star Factory Team finished well! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags #yesthatreallyisahottubinbackground" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Cyclocross Illinois Finals...Love Star Factory Team finished well! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags #yesthatreallyisahottubinbackground</small>
+                           </div>
+                           <img src="../lsphotos/image000214.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000215.jpg" title="Great sprint through the finish! #lovestarfactoryteam #cyclocross #lovestarbicyclebags #cycling #cyclocrosschicago" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Great sprint through the finish! #lovestarfactoryteam #cyclocross #lovestarbicyclebags #cycling #cyclocrosschicago</small>
+                           </div>
+                           <img src="../lsphotos/image000215.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000216.jpg" title="Beautiful day for a race. Proud of Lovestar Factory Team strong finish! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Beautiful day for a race. Proud of Lovestar Factory Team strong finish! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000216.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000217.jpg" title="Beautiful course for the Illinois cyclocross finals! #cyclocross #lovestarfactoryteam #cycling #lovestarbicyclebags #fatbike #cyclocrosschicago" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Beautiful course for the Illinois cyclocross finals! #cyclocross #lovestarfactoryteam #cycling #lovestarbicyclebags #fatbike #cyclocrosschicago</small>
+                           </div>
+                           <img src="../lsphotos/image000217.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000643.jpg" title="@casadewaggoner crushing it start to finish this season. #montrosecx #lovestarfactoryteam #Cyclocross #cx" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -194,71 +259,6 @@
                               <small>XPac & Cordura #lovestarbicyclebags Saddlepack in a sharp looking black and grey. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000224.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000225.jpg" title="Stunner of a racing stripe on this #lovestarbicyclebags Saddlepack. A little flash of color-matched stitching makes for a pretty awesome finish. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Stunner of a racing stripe on this #lovestarbicyclebags Saddlepack. A little flash of color-matched stitching makes for a pretty awesome finish. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000225.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000226.jpg" title="Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000226.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000227.jpg" title="A very wet and muddy #optoutside ride today. #fatbike #bikepackingbags #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A very wet and muddy #optoutside ride today. #fatbike #bikepackingbags #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000227.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000228.jpg" title="Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000228.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000651.jpg" title="Maiden voyage on the new Motobecane today. Considering I bought this bike as a cost-effective (relatively speaking of course!) straight from the internet all weather/commuter bike, I'm pleasantly surprised at how solid it is. Major kudos to @elliotlovestarbicycles for helping me assemble, lube, and adjust all the critical stuff. A few tweaks and upgrades and this will be a killer winter machine!! #lovestarfactoryteam #motobecane" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Maiden voyage on the new Motobecane today. Considering I bought this bike as a cost-effective (relatively speaking of course!) straight from the internet all weather/commuter bike, I'm pleasantly surprised at how solid it is. Major kudos to @elliotlovestarbicycles for helping me assemble, lube, and adjust all the critical stuff. A few tweaks and upgrades and this will be a killer winter machine!! #lovestarfactoryteam #motobecane</small>
-                           </div>
-                           <img src="../lsphotos/image000651.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
