--- a/instagram31.html
+++ b/instagram31.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000676.jpg" title="Muddy race today. #lovestarfactoryteam had a day with some extreme highs and lows. Several top 10 finishes from our juniors team and our full sized squad. But we had one team mate leave in an ambulance. Wishing him well and hoping for a speedy recovery. Thanks to @highergearbikes for putting on a great race! #cyclocross #cx #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Muddy race today. #lovestarfactoryteam had a day with some extreme highs and lows. Several top 10 finishes from our juniors team and our full sized squad. But we had one team mate leave in an ambulance. Wishing him well and hoping for a speedy recovery. Thanks to @highergearbikes for putting on a great race! #cyclocross #cx #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000676.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000677.jpg" title="#lovestarfactoryteam on the under-3yo podium!! #babysnub #cyclocross #cx #cylist" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam on the under-3yo podium!! #babysnub #cyclocross #cx #cylist</small>
+                           </div>
+                           <img src="../lsphotos/image000677.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000678.jpg" title="Fun times watching #evanstoncx today. Looking good @ddave12000 #lovestarfactoryteam #cx #cyclocross" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Fun times watching #evanstoncx today. Looking good @ddave12000 #lovestarfactoryteam #cx #cyclocross</small>
+                           </div>
+                           <img src="../lsphotos/image000678.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000679.jpg" title="Very competitive sub-3 year old category today! #cyclocross #futurecyclist #cycling #babysnub #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Very competitive sub-3 year old category today! #cyclocross #futurecyclist #cycling #babysnub #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000679.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000239.jpg" title="#babysnub steppin' up to the line for her first #cyclocross race! Some very Belgian conditions to start her racing career. #lovestarfactoryteam #lovestarbicyclebags #cx #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babysnub steppin' up to the line for her first #cyclocross race! Some very Belgian conditions to start her racing career. #lovestarfactoryteam #lovestarbicyclebags #cx #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000239.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000240.jpg" title="First race for the youngest member of the Lovestar Factory Team!!! Go #babysnub!!!!!! #cyclocrosschicago #cycling #lovestarfactoryteam #lovestarbicyclebags #2yearsoldandalreadyhooked" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -194,71 +259,6 @@
                               <small>Flyover! #lovestarfactoryteam #cyclocross #HopkinsCX</small>
                            </div>
                            <img src="../lsphotos/image000683.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000684.jpg" title="Fighting through the corners. #lovestarfactoryteam #HopkinsCX #cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fighting through the corners. #lovestarfactoryteam #HopkinsCX #cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000684.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000685.jpg" title="@ddave12000 killing it at #HopkinsCX ... #lovestarfactoryteam #cyclocross #cx #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@ddave12000 killing it at #HopkinsCX ... #lovestarfactoryteam #cyclocross #cx #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000685.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000686.jpg" title="#HopkinsCX today. Fun and fast course! @casadewaggoner flying through and looking strong. #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#HopkinsCX today. Fun and fast course! @casadewaggoner flying through and looking strong. #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000686.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000250.jpg" title="#lovestarfactoryteam doing some dirt shreddin' today. #cycling #mountainbike #lovestarbicyclebags #bikechi #palos" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam doing some dirt shreddin' today. #cycling #mountainbike #lovestarbicyclebags #bikechi #palos</small>
-                           </div>
-                           <img src="../lsphotos/image000250.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000251.jpg" title="This Giant bag opens to face the rider, is waterproof, and has some little details like the upcycled bicycle tire handle to complete a very cool build. #handmade #cycling #lovestarbicyclebags #bicyclebag #bikecommute" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>This Giant bag opens to face the rider, is waterproof, and has some little details like the upcycled bicycle tire handle to complete a very cool build. #handmade #cycling #lovestarbicyclebags #bicyclebag #bikecommute</small>
-                           </div>
-                           <img src="../lsphotos/image000251.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
