--- a/instagram37.html
+++ b/instagram37.html
@@ -6,6 +6,75 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000735.jpg" title="#VSCOcam #lovestarfactoryteam @theandyhudson @piliu7" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>#VSCOcam #lovestarfactoryteam @theandyhudson @piliu7</small>
+                           </div>
+                           <img src="../lsphotos/image000735.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000297.jpg" title="#lovestarbicyclebags is moving to a new top secret location! Build out process has begun...excited to have some next level work space for me and the family!" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarbicyclebags is moving to a new top secret location! Build out process has begun...excited to have some next level work space for me and the family!</small>
+                           </div>
+                           <img src="../lsphotos/image000297.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000298.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+#lovestarfactoryteam colors add some flash to the matching jumbo sized #lovestarbicyclebags SaddlePack. #bikepacking #bicyclebag #handmade #cycling #fatbike #bicycle #framebag #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+#lovestarfactoryteam colors add some flash to the matching jumbo sized #lovestarbicyclebags SaddlePack. #bikepacking #bicyclebag #handmade #cycling #fatbike #bicycle #framebag #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000298.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000299.jpg" title="#lovestarfactoryteam colors add some flash to the matching jumbo sized #lovestarbicyclebags SaddlePack. #bikepacking #bicyclebag #handmade #cycling #fatbike #bicycle #framebag #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam colors add some flash to the matching jumbo sized #lovestarbicyclebags SaddlePack. #bikepacking #bicyclebag #handmade #cycling #fatbike #bicycle #framebag #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000299.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000300.jpg" title="Close up of the stitching...orange for days. #lovestarbicyclebags #handmade #framebag #bikepacking #bicycle #fatbike #bicyclebag #cycling #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Close up of the stitching...orange for days. #lovestarbicyclebags #handmade #framebag #bikepacking #bicycle #fatbike #bicyclebag #cycling #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000300.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000301.jpg" title="Still have some interior finishing to do, but this custom #lovestarbicyclebags frame bag is just about done. Color matched contrast stitching really makes for a nice tie in to the frame. #handmade #cycling #bicyclebag #bikepacking #fatbike #bicycle #bikechi #framebag #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -198,71 +267,6 @@
                               <small>Springy sunrise ride. Last man of our group this morning riding away in the background. I love how rides grow and crescendo to the coffee shop and then slowly one by one split and fade until you solo home. #cycling #cyclist #bicycle #lovestarfactoryteam #bikechi #moots #psychloX</small>
                            </div>
                            <img src="../lsphotos/image000742.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000743.jpg" title="Sunrise ride. #moots #cycling #bicycle #bikechi #lovestarfactoryteam #cyclist #psychloX" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride. #moots #cycling #bicycle #bikechi #lovestarfactoryteam #cyclist #psychloX</small>
-                           </div>
-                           <img src="../lsphotos/image000743.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000744.jpg" title="Spoils of war. #cycling #cyclist #bikechi #bicycle #thebonebell #lovestarfactoryteam #arrivadolce" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Spoils of war. #cycling #cyclist #bikechi #bicycle #thebonebell #lovestarfactoryteam #arrivadolce</small>
-                           </div>
-                           <img src="../lsphotos/image000744.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000745.jpg" title="Early to bed, early to shred. #cycling #bicycle #bikechi #evanston #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Early to bed, early to shred. #cycling #bicycle #bikechi #evanston #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000745.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000309.jpg" title="Boom! Subtle Grey & Black exterior...blaze orange interior. #lovestarbicyclebags #handmade #seatbag #bikepacking #bikechi #cycling #bicyclebag #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Boom! Subtle Grey & Black exterior...blaze orange interior. #lovestarbicyclebags #handmade #seatbag #bikepacking #bikechi #cycling #bicyclebag #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000309.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000310.jpg" title="Wrapped up another #lovestarbicyclebags SaddlePack tonight. This is still one of my favorite color combos. More pics soon! #handmade #bicyclebag #bicycle #cycling #bikechi #bicycle #seatbag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Wrapped up another #lovestarbicyclebags SaddlePack tonight. This is still one of my favorite color combos. More pics soon! #handmade #bicyclebag #bicycle #cycling #bikechi #bicycle #seatbag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000310.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
