--- a/instagram38.html
+++ b/instagram38.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000743.jpg" title="Sunrise ride. #moots #cycling #bicycle #bikechi #lovestarfactoryteam #cyclist #psychloX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride. #moots #cycling #bicycle #bikechi #lovestarfactoryteam #cyclist #psychloX</small>
+                           </div>
+                           <img src="../lsphotos/image000743.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000744.jpg" title="Spoils of war. #cycling #cyclist #bikechi #bicycle #thebonebell #lovestarfactoryteam #arrivadolce" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Spoils of war. #cycling #cyclist #bikechi #bicycle #thebonebell #lovestarfactoryteam #arrivadolce</small>
+                           </div>
+                           <img src="../lsphotos/image000744.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000745.jpg" title="Early to bed, early to shred. #cycling #bicycle #bikechi #evanston #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Early to bed, early to shred. #cycling #bicycle #bikechi #evanston #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000745.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000309.jpg" title="Boom! Subtle Grey & Black exterior...blaze orange interior. #lovestarbicyclebags #handmade #seatbag #bikepacking #bikechi #cycling #bicyclebag #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Boom! Subtle Grey & Black exterior...blaze orange interior. #lovestarbicyclebags #handmade #seatbag #bikepacking #bikechi #cycling #bicyclebag #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000309.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000310.jpg" title="Wrapped up another #lovestarbicyclebags SaddlePack tonight. This is still one of my favorite color combos. More pics soon! #handmade #bicyclebag #bicycle #cycling #bikechi #bicycle #seatbag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Wrapped up another #lovestarbicyclebags SaddlePack tonight. This is still one of my favorite color combos. More pics soon! #handmade #bicyclebag #bicycle #cycling #bikechi #bicycle #seatbag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000310.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000311.jpg" title="Finished up a #lovestarbicyclebags SaddlePack during nap time today. Black and orange really pop together! #cycling #bicycle #handmade #seatbag #bikepacking #bicyclebag #bikechi #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -194,71 +259,6 @@
                               <small>Getting charged for a team night ride tonight. #cycling #fatbike #bicycle #nightride #lovestarbicyclebags #lovestarfactoryteam #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000317.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000318.jpg" title="Worked my 8th #bikethedrive this morning. Some of the SWAG matches my kit almost too well. #cycling #bikechi #lovestarbicyclebags #bicycle #bikecommute #REIvillage" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Worked my 8th #bikethedrive this morning. Some of the SWAG matches my kit almost too well. #cycling #bikechi #lovestarbicyclebags #bicycle #bikecommute #REIvillage</small>
-                           </div>
-                           <img src="../lsphotos/image000318.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000319.jpg" title="#lovestarfactoryteam Rollin' out to the #almanzo100 . Killer crew this year, ready to pull #baby snub to victory. #cyclocross #gravel #gravelgrinder #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam Rollin' out to the #almanzo100 . Killer crew this year, ready to pull #baby snub to victory. #cyclocross #gravel #gravelgrinder #cycling #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000319.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000320.jpg" title="I'm back! After almost a month without access, I am back on the internets...while I was out, had some great rides with the fine folks on the Lovestar Factory Team like the #almanzo100 . Woohoo! #cycling #gravel #gravelgrinder #almanzo2015 #lovestarbicyclebags #lovestarfactoryteam #cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>I'm back! After almost a month without access, I am back on the internets...while I was out, had some great rides with the fine folks on the Lovestar Factory Team like the #almanzo100 . Woohoo! #cycling #gravel #gravelgrinder #almanzo2015 #lovestarbicyclebags #lovestarfactoryteam #cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000320.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000754.jpg" title="#LoveStarFactoryTeam dudes before the race! #Almanzo100 #LSB" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#LoveStarFactoryTeam dudes before the race! #Almanzo100 #LSB</small>
-                           </div>
-                           <img src="../lsphotos/image000754.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000321.jpg" title="Crushing gravel for 100 miles with Team Lovestar for the Almanzo 100. #lovestarbicyclebags #almanzo100" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Crushing gravel for 100 miles with Team Lovestar for the Almanzo 100. #lovestarbicyclebags #almanzo100</small>
-                           </div>
-                           <img src="../lsphotos/image000321.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
