--- a/instagram48.html
+++ b/instagram48.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000494.jpg" title="Loaded and off to the Dirty Muddr Gravel road race...Which is looking like it will live up to its name. #gravel #moots #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Loaded and off to the Dirty Muddr Gravel road race...Which is looking like it will live up to its name. #gravel #moots #lovestarbicyclebags #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000494.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000495.jpg" title="Lovestar Ride Wallet prototype 3.0. Added some elastic bands that can be used to secure a micro pump to the bag and keep your jersey pocket organized. So close to the final design...watch for these on my etsy shop sometime in May! #handmade #lovestarbicyclebags #cycling #bikechi #essentials" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Ride Wallet prototype 3.0. Added some elastic bands that can be used to secure a micro pump to the bag and keep your jersey pocket organized. So close to the final design...watch for these on my etsy shop sometime in May! #handmade #lovestarbicyclebags #cycling #bikechi #essentials</small>
+                           </div>
+                           <img src="../lsphotos/image000495.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000496.jpg" title="Giant square of upholstery grade foam...beginnings of a custom padded case. #whatsinthecase #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Giant square of upholstery grade foam...beginnings of a custom padded case. #whatsinthecase #handmade #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000496.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000497.jpg" title="@shenanigans1313 yep! Should fit all that no problem. Fits in a jersey pocket...loaded up with 2 levers, a multi-tool, a CO2, a snack, my ID & cards, and the biggest patch kit that I could find. I hope to have these available on my Etsy shop starting in May. #lovestarbicyclebags #cycling #rideessentials #bikechi #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@shenanigans1313 yep! Should fit all that no problem. Fits in a jersey pocket...loaded up with 2 levers, a multi-tool, a CO2, a snack, my ID & cards, and the biggest patch kit that I could find. I hope to have these available on my Etsy shop starting in May. #lovestarbicyclebags #cycling #rideessentials #bikechi #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000497.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000498.jpg" title="Spring flowers. #moots #bikechi #springride #flowerpower #cycling  #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Spring flowers. #moots #bikechi #springride #flowerpower #cycling  #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000498.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000499.jpg" title="Hard to believe this is Chicago. Easter ride. #bikechi #cycling #lovestarbicyclebags #moots #lakemichigan #3rdcoast" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -194,71 +259,6 @@
                               <small>Lovestar Bicycle Bags...dreams to reality. #lovestarbicyclebags #bikepacking #handmade #custom #gravel #gravelgrinder #cycling</small>
                            </div>
                            <img src="../lsphotos/image000513.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000514.jpg" title="SNEEK PEEK! For those who are adherent to &quot;the Rules&quot; or those who just want to carry the essentials...meet the Lovestar Ride Wallet. No need for a bag on your bike. It will keep your jersey pockets organized and you valuable bits sweat free. More details about these on the way soon... #handmade #cycling #lovestarbicyclebags #therules" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>SNEEK PEEK! For those who are adherent to "the Rules" or those who just want to carry the essentials...meet the Lovestar Ride Wallet. No need for a bag on your bike. It will keep your jersey pockets organized and you valuable bits sweat free. More details about these on the way soon... #handmade #cycling #lovestarbicyclebags #therules</small>
-                           </div>
-                           <img src="../lsphotos/image000514.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000515.jpg" title="We came, we crushed gravel we conquered...and all on some very pasty winter legs. See ya Michigan it's been a slice. #barryroubaix #gravel #lovestarbicyclebags #cycling #bikeMI" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>We came, we crushed gravel we conquered...and all on some very pasty winter legs. See ya Michigan it's been a slice. #barryroubaix #gravel #lovestarbicyclebags #cycling #bikeMI</small>
-                           </div>
-                           <img src="../lsphotos/image000515.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000516.jpg" title="Something new in the works... #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Something new in the works... #lovestarbicyclebags #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000516.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000517.jpg" title="Some better photos of this Almanzo 100 bag set. Hi-vis orange, neon lime and electric turquoise...definitely rad. #almanzo100 #handmade #bikepacking #framebag #gravelgrinder #lovestarbicyclebags #blackisboring" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some better photos of this Almanzo 100 bag set. Hi-vis orange, neon lime and electric turquoise...definitely rad. #almanzo100 #handmade #bikepacking #framebag #gravelgrinder #lovestarbicyclebags #blackisboring</small>
-                           </div>
-                           <img src="../lsphotos/image000517.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000518.jpg" title="Few more shots... #bikepacking  #gravelgrinder #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Few more shots... #bikepacking  #gravelgrinder #lovestarbicyclebags #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000518.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
